# context-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  action.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer.md  reviewer.md  tester.md
.claude/hooks/: auto-lint.sh  commit-push-reminder.sh  pre-compact.sh  session-start.sh  stop-gate.sh  task-complete-gate.sh  teammate-idle-gate.sh
.claude/rules/: agent-teams.md  async-patterns.md  commits.md  models.md  refactoring.md  scoring.md  testing.md  versioning.md
.github/examples/: aeo-audit-inline.yml  aeo-audit-preview.yml  aeo-audit.yml
.github/workflows/: test.yml
benchmarks/: generate_report.py  run_benchmark.py
docs/: README-SECTIONS.md  ci-integration.md  long-running-session-plan.md  markdown-engine.md  mcp-integration.md  scoring-v3.md  scoring.md
src/aeo_cli/: __init__.py  main.py  server.py
src/aeo_cli/cli/: audit.py  benchmark.py  generate.py  history.py  radar.py  retail.py
src/aeo_cli/core/: auditor.py  batch.py  crawler.py  models.py  regression.py  retry.py  scoring.py  webhook.py
src/aeo_cli/core/benchmark/: __init__.py  cost.py  dispatcher.py  loader.py  metrics.py
src/aeo_cli/core/checks/: __init__.py  content.py  content_usage.py  eeat.py  robots.py  rsl.py
src/aeo_cli/core/ci/: baseline.py
src/aeo_cli/core/generate/: __init__.py  batch.py  compiler.py  llm.py  profiles.py
src/aeo_cli/core/radar/: __init__.py  analyzer.py  parser.py  query.py
src/aeo_cli/core/retail/: __init__.py  auditor.py  feed_spec.py  scoring.py
src/aeo_cli/core/retail/parsers/: __init__.py  base.py  blibli.py  generic.py  tiktok_shop.py  zalora.py
src/aeo_cli/formatters/: ci_summary.py  html.py  recommendations.py  verbose.py  verbose_panels.py
src/context_cli/: __init__.py  main.py  server.py
src/context_cli/cli/: __init__.py  audit.py  benchmark.py  compare.py  generate.py  history.py  leaderboard.py  markdown.py  mcp_cmd.py  radar.py  retail.py  watch.py
src/context_cli/core/: auditor.py  batch.py  cache.py  compare.py  config.py  cost.py  crawler.py  discovery.py  history.py  llm.py  models.py  plugin.py  recommend.py  regression.py  retry.py  scoring.py  webhook.py
src/context_cli/core/benchmark/: cost.py  dispatcher.py  judge.py  loader.py  metrics.py
src/context_cli/core/checks/: __init__.py  agents_md.py  content.py  content_usage.py  eeat.py  llms_txt.py  markdown_accept.py  mcp_endpoint.py  nlweb.py  robots.py  rsl.py  schema.py  semantic_html.py  x402.py
src/context_cli/core/ci/: __init__.py  baseline.py  thresholds.py
src/context_cli/core/generate/: __init__.py  agents_md.py  batch.py  compiler.py  llm.py  middleware_config.py  prompts.py  x402_config.py
src/context_cli/core/markdown_engine/: __init__.py  converter.py  extractor.py
src/context_cli/core/models/: __init__.py  agent_readiness.py  audit.py  benchmark.py  ci.py  compare.py  content.py  generate.py  llms_txt.py  plugin.py  radar.py  retail.py  robots.py  schema.py  signals.py  webhook.py
src/context_cli/core/radar/: __init__.py  analyzer.py  domains.py  parser.py  query.py
src/context_cli/core/retail/: __init__.py  auditor.py  feed_spec.py  scoring.py
src/context_cli/core/retail/parsers/: __init__.py  amazon.py  base.py  blibli.py  generic.py  lazada.py  shopee.py  tiktok_shop.py  tokopedia.py  zalora.py
src/context_cli/core/serve/: __init__.py  middleware.py  static_gen.py
src/context_cli/formatters/: __init__.py  ci_summary.py  compare.py  csv.py  html.py  leaderboard.py  markdown.py  recommendations.py  rich_output.py  verbose.py  verbose_panels.py
tests/: test_agents_md.py  test_answer_first.py  test_auditor.py  test_auditor_coverage.py  test_batch.py  test_benchmark_cli.py  test_benchmark_cost.py  test_benchmark_dispatcher.py  test_benchmark_judge.py  test_benchmark_loader.py  test_benchmark_metrics.py  test_cache.py  test_ci_baseline.py  test_ci_features.py  test_ci_summary.py  test_ci_thresholds.py  test_cli.py  test_cli_coverage.py  test_cli_errors.py  test_compare.py  test_config.py  test_content_boundaries.py  test_content_chunks.py  test_content_usage.py  test_converter.py  test_crawler_coverage.py  test_crawler_errors.py  test_custom_bots.py  test_discovery.py  test_discovery_coverage.py  test_eeat.py  test_extractor.py  test_formatters.py  test_generate_agents_md.py  test_generate_batch.py  test_generate_batch_cli.py  test_generate_cli.py  test_generate_compiler.py  test_generate_llm.py  test_generate_middleware_config.py  (+54 more)
