[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aeo-cli"
version = "0.7.0"
description = "Agentic Engine Optimization CLI — audit URLs for AI crawler readiness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hansel Wahjono" },
]
keywords = ["aeo", "seo", "ai", "llm", "crawler", "audit", "robots-txt", "schema-org"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "crawl4ai>=0.4",
    "fastmcp>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/hanselhansel/aeo-cli"
Repository = "https://github.com/hanselhansel/aeo-cli"
Issues = "https://github.com/hanselhansel/aeo-cli/issues"

[project.optional-dependencies]
generate = [
    "litellm>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "litellm>=1.40",
]

[project.scripts]
aeo-cli = "aeo_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aeo_cli --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/aeo_cli"]
omit = ["src/aeo_cli/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["crawl4ai.*", "bs4.*", "litellm.*"]
ignore_missing_imports = true
