[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-linter"
version = "3.0.0"
description = "Context CLI — LLM Readiness Linter for token efficiency and RAG readiness"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hansel Wahjono" },
]
keywords = ["llm", "ai", "linter", "token-waste", "rag", "robots-txt", "schema-org", "llms-txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "crawl4ai>=0.4",
    "fastmcp>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/hanselhansel/context-cli"
Repository = "https://github.com/hanselhansel/context-cli"
Issues = "https://github.com/hanselhansel/context-cli/issues"

[project.optional-dependencies]
generate = [
    "litellm>=1.40",
]
markdown = [
    "markdownify>=0.13",
    "readabilipy>=0.2",
]
serve = [
    "aiohttp>=3.9",
    "markdownify>=0.13",
    "readabilipy>=0.2",
]
middleware = [
    "starlette>=0.37",
    "markdownify>=0.13",
    "readabilipy>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "litellm>=1.40",
    "markdownify>=0.13",
    "readabilipy>=0.2",
    "aiohttp>=3.9",
    "starlette>=0.37",
    "types-PyYAML>=6.0",
]

[project.scripts]
context-cli = "context_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=context_cli --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/context_cli"]
omit = ["src/context_cli/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["crawl4ai.*", "bs4.*", "litellm.*", "markdownify.*", "readabilipy.*", "aiohttp.*", "starlette.*"]
ignore_missing_imports = true
